--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,7 @@
                 <button type="submit" class="btn btn-primary">Sign Out</button>
             </form>
         {% else %}
-            <a href="{{ url_for('login') }}">Login</a>
-            <a href="{{ url_for('signup') }}">Sign Up</a>
+            <a href="{{ url_for('login') }}">Login/Sign Up</a>
         {% endif %}
     </nav>
 
