--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,10 @@
             {{ form.email(size=32) }}<br>
             {{ form.password.label }}<br>
             {{ form.password(size=32) }}<br>
-            {{ form.submit() }}
+            {{ form.submit(class="btn btn-primary btn-block") }}
         </div>
     </form>
+
+    <p class="mt-3">Don't have an account? <a href="{{ url_for('signup') }}">Sign up for free</a></p>
 {% endblock %}
+
