--- a/templates/signup.html
+++ b/templates/signup.html
@@ -22,8 +22,9 @@
             {{ form.password(size=32) }}<br>
             {{ form.confirm_password.label }}<br>
             {{ form.confirm_password(size=32) }}<br>
-            {{ form.submit() }}
+            {{ form.submit(class="btn btn-primary btn-block") }}
         </div>
     </form>
-{% endblock %}
 
+    <p class="mt-3">Already have an account? <a href="{{ url_for('login') }}">Log in here</a></p>
+{% endblock %}
