--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
             {{ form.email(size=32) }}<br>
             {{ form.password.label }}<br>
             {{ form.password(size=32) }}<br>
-            {{ form.submit(class="btn btn-primary btn-block") }}
+            {{ form.submit(class="btn btn-primary") }}
         </div>
     </form>
 
