--- a/templates/signup.html
+++ b/templates/signup.html
@@ -22,7 +22,7 @@
             {{ form.password(size=32) }}<br>
             {{ form.confirm_password.label }}<br>
             {{ form.confirm_password(size=32) }}<br>
-            {{ form.submit(class="btn btn-primary btn-block") }}
+            {{ form.submit(class="btn btn-primary") }}
         </div>
     </form>
 
