added hero sections for landing and generator page. Style updates including removing some page-wide containers on generator/landing pages and adding in a new font.

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="{% if not no_container %}container{% endif %}">
         {% block content %}{% endblock %}
     </div>
 
