--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: 'SUSEfont';
+    src: url('/static/fonts/SUSE-Regular.ttf') format('truetype'); /* Correct the path */
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+/* Apply the custom font to the whole site */
+body {
+    font-family: 'SUSEfont', Arial, sans-serif; /* Fallback to Arial and sans-serif in case the custom font doesn't load */
+}
 /* General body styling */
 body {
     background-color: #f8f9fa;
@@ -9,6 +21,7 @@ body {
 
 /* Navbar styling */
 .navbar {
+    font-family: SUSEfont;
     background-color: #343a40;
     padding: 10px;
     text-align: center;
@@ -42,7 +55,7 @@ h1, .features-title {
     font-size: 2rem;
     margin-bottom: 20px;
     color: #343a40;
-    text-transform: uppercase;
+
     text-align: center;
 }
 
@@ -134,6 +147,14 @@ h1, .features-title {
     margin-left: auto; /* Pushes the sign-out button to the right */
 }
 
+/* Center the loading spinner and text */
+.loading-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 /* Loading spinner and text */
 .loading-spinner {
     margin: 20px auto;
@@ -142,7 +163,7 @@ h1, .features-title {
     border-radius: 50%;
     width: 60px;
     height: 60px;
-    animation: spin 2s linear infinite;
+    animation: spin 1s ease-in-out infinite;
     z-index: 9999;
     position: relative;
 }
@@ -157,7 +178,7 @@ h1, .features-title {
     font-size: 1rem;
     color: #343a40;
     z-index: 9999;
-    position: relative;
+    position: center;
 }
 
 /* Error messages */
@@ -272,14 +293,14 @@ h1, .features-title {
     font-size: 2rem;
     color: #343a40;
     margin-bottom: 20px;
-    text-transform: uppercase;
+
     text-align: center;
 }
 
 .feature-item {
     display: flex;
     align-items: center;
-    background-color: #ffffff;
+    background-color: #f7f7f7 ;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
@@ -299,48 +320,75 @@ h1, .features-title {
     line-height: 1.6;
 }
 
-/* About page styling */
-.about-section {
-    background: linear-gradient(to bottom right, #f8f9fa, #e9ecef);
-    padding: 20px;
-    margin-bottom: 20px;
-    border: 1px solid #b5bcc1;
-    border-radius: 8px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
-    text-align: left;
-}
-
-.about-section p {
-    margin: 0;
-    font-size: 1.1rem;
-    line-height: 1.4;
-    color: #495057;
-    text-indent: 20px;
-    padding: 5px 5px; 
-}
-
-/* Additional Styles */
-/* Hero Section */
+/* Hero Section Styling */
 .hero-section {
+    font-family: SUSEfont;
+    background-color: #2c1212;
+    padding: 100px 0;
     text-align: center;
-    margin: 40px 0;
+    color: #fff;
 }
 
-.hero-section h1 {
+.hero-title {
     font-size: 3rem;
-    color: #343a40;
-}
-
-.hero-section p {
-    font-size: 1.25rem;
-    color: #6c757d;
+    font-weight: bold;
+    color: #fff;
     margin-bottom: 20px;
 }
 
-/* CTA Button */
-.btn-cta {
+.hero-subtitle {
     font-size: 1.25rem;
-    padding: 10px 20px;
+    margin-bottom: 40px;
+    color: #ddd;
+}
+
+.hero-search {
+    display: inline-block;
+    position: relative;
+    max-width: 600px;
+    width: 100%;
+}
+
+.hero-input {
+    width: 100%;
+    padding: 15px 20px;
+    border-radius: 30px;
+    border: none;
+    outline: none;
+    font-size: 1rem;
+}
+
+.hero-btn {
+    background-color: #f5c000;
+    border: none;
+    border-radius: 100%;
+    padding: 15px;
+    position: absolute;
+    right: -5px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    width: 60px; 
+}
+
+.search-icon {
+    width: 20px;
+    height: 20px;
+}
+
+.hero-links {
+    margin-top: 30px;
+}
+
+.hero-link {
+    color: #f5c000;
+    font-size: 1rem;
+    margin: 0 10px;
+    text-decoration: underline;
+}
+
+.hero-link:hover {
+    text-decoration: underline;
 }
 
 /* Footer Styling */
@@ -351,5 +399,3 @@ footer {
     padding: 15px 0;
     margin-top: 50px;
 }
-
-
